--- a/pixi.toml
+++ b/pixi.toml
@@ -37,6 +37,11 @@ python-igraph = ">=0.11.5,<0.12"
 # Compiled AutoMech modules
 automech-toolbox = ">=2024.5.24,<2024.6"
 mess-static = ">=2024.5.16,<2024.6"
+ase = ">=3.23.0,<3.24"
+tblite = ">=0.3.0,<0.4"
+tblite-python = ">=0.3.0,<0.4"
+jax = ">=0.4.27,<0.5"
+jaxlib = ">=0.4.23,<0.5"
 
 [system-requirements]
 linux="3.10"
