--- a/pixi.toml
+++ b/pixi.toml
@@ -13,6 +13,7 @@ download = { cmd = "./scripts/download.sh", cwd = "." }
 install = { cmd = "./scripts/install.sh", cwd = "." }
 status = { cmd = "./scripts/status.sh", cwd = "." }
 update = { cmd = "./scripts/update.sh", cwd = "." }
+test = { cmd = "./scripts/test.sh", cwd = "." }
 
 [dependencies]
 python = "3.10.*"
@@ -39,6 +40,8 @@ matplotlib = ">=3.8.4,<3.9"
 python-igraph = ">=0.11.5,<0.12"
 # Compiled AutoMech modules
 automech-toolbox = ">=2024.6.19"
+asyncssh = ">=2.14.1,<2.15"
+parallel = ">=20240722,<20240723"
 
 [system-requirements]
 linux="3.10"
