--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,8 +73,15 @@ libgfortran = ">=3.0.0,<3.1"
 libgcc = ">=7.2.0,<7.3"
 libstdcxx-ng = ">=14.1.0,<14.2"
 
+[tool.pixi.feature.proto.dependencies]
+tqdm = "*"
+pandera = "*"
+polars = "*"
+cantera = "*"
+
 [tool.pixi.environments]
 build = ["build"]
+proto = ["proto"]
 
 # tools
 [tool.black]
@@ -118,3 +125,6 @@ check_untyped_defs = true
 show_error_codes = true
 follow_imports = "skip"
 ignore_errors = true
+
+[dependency-groups]
+proto = ["pyvis>=0.3.2,<0.4"]
