--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ test = { cmd = "./scripts/test.py" }
 subtasks = { cmd = "./scripts/subtasks.sh" }
 node = { cmd = "./scripts/node.sh" }
 x2z = { cmd = "./scripts/x2z.py" }
+lint = { cmd = "./scripts/lint.sh", cwd = "." }
 
 [tool.pixi.dependencies]
 python = "3.11.*"
@@ -78,6 +79,7 @@ tqdm = "*"
 pandera = "*"
 polars = "*"
 cantera = "*"
+pyarrow = "*"
 
 [tool.pixi.environments]
 build = ["build"]
