New: Combine multiple mechanisms together

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,6 +118,7 @@ extend-ignore = [
     "D416", # Section name should end with a colon
     "N806", # Variable in function should be lowercase
     "C901", # Too complex
+    # "RUF022", # Unsorted __all__
 ]
 
 [tool.mypy]
